# SDA-PA-Main

pocFactura_legacy/: README.md  cod_vamal.xlsx  lines_standardized.csv  lines_standardized.json  pyproject.toml
pocFactura_legacy/Document_Scanner/: invoice_scanner_pro.py
pocFactura_legacy/Document_Scanner/app_data/: data.json
pocFactura_legacy/app_gui/: gui_launcher.py
pocFactura_legacy/src/Document_Scanner/: invoice_scanner_pro.py
pocFactura_legacy/src/Document_Scanner/app_data/: data.json
pocFactura_legacy/src/Document_Scanner/app_data/csv_standardized/: 20260119_215202_facuraTst_standardized.csv
pocFactura_legacy/src/Document_Scanner/app_data/documents/: 20260118_044908_facuraTst.xml
pocFactura_legacy/src/invoice_core/: __init__.py  cli_standardize.py  config.py  gemini_patcher.py  matcher.py  ubl_lines.py
